css/styles.css
/* ... */
.darkmode {
    --bg: #2a2a2a;
    --primerColor: #39a900;
    --segundoColor: #00304d;
    --textColor: #ffffff;
    --color-superficie: rgba(34, 34, 34, 0.4);
    --cardShadow: rgba(99, 99, 99, 0.74);
    --btn-theme-light-dark: rgb(220, 220, 220);
    --form: rgba(59, 59, 59, 0.901);
    --bg-btn-theme: #616161;
}

#theme-switch {
    height: 40px;
    width: 100px;
    border: none;
    background-color: var(--bg);
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 11;
    position: fixed;
    top: 0;
    right: 0;
}

#theme-switch svg {
    fill: var(--btn-theme-light-dark);
}

#theme-switch svg:last-child {
    display: none;
}

.darkmode #theme-switch svg:first-child {
    display: none;
}

.darkmode #theme-switch svg:last-child {
    display: block;
}


/* ------------------------------------------
    HEADER : GOV
--------------------------------------------- */
header {
    width: 100%;
    background-color: var(--bgGobierno);
    display: flex;
    justify-content: center;
    z-index: 10;
    position: fixed;
    top: 0;
}

.contenBosGov {
    width: 80%;
    height: 40px;
    padding: 8px 0;
}

.boxGov {
    width: 100px;
    height: 20px;
    position: relative;
}

.boxGov img {
    width: 100%;
    height: 100%;
    object-fit: contain;
    z-index: 1;
}


/* BOX LOGOS */
.boxSENAyGov {
    width: 100%;
    height: 100px;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    z-index: 20;
    position: fixed;
    top: 40px;
    background-color: var(--bg);
}


.boxSENAyGov.abajo {
    position: fixed;
    top: 39px;
    height: 100px;
}


.senaLogo {
    width: 100px;
    height: 100px;
}

.senaLogo img {
    width: 100%;
    height: 100%;
    object-fit: contain;
    z-index: 1;
}

.govLogo {
    width: 200px;
    height: 200px;
    padding: 50px 0;
}

.govLogo img {
    width: 100%;
    height: 100%;
    object-fit: contain;
}

/* BUSQUEDA */
.formUp {
    background-color: var(--form);
    width: auto;
    padding: 3px;
    border-radius: 50px;
    display: flex;
}

.formUp.formAbajo {
    background-color: var(--form);
}

.inputSearch {
    flex: 1;
    width: 450px;
    max-width: 450px;
    height: 30px;
    border-radius: 50px;
    padding: 10px;
    border: none;
    outline: none;
    color: var(--textColor);
    background: transparent;
}

.inputSearch:focus,
.inputSearch:active {
    background: none;
}

.btnBuscar {
    width: auto;
    height: auto;
    padding: 6px;
    border: none;
    border-radius: 10px;
    background: transparent;
    color: var(--primerColor);
    font-size: 1rem;
    font-weight: 400;
    cursor: pointer;
}

/* --------------------------------------------------------
    NavBar fijada en la parte inferior de la pagina
------------------------------------------------------------ */
.boxNavBar {
    width: 100%;
    height: auto;
    z-index: 10;
    position: fixed;
    top: 140px;
    background-color: var(--bg);
}

.navAbajo {
    position: fixed;
    top: 136px;
}

.navAbajo a {
    color: var(--textColor);
}

nav {
    width: 100%;
    height: 60px;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 10;
}

nav ul {
    width: 100%;
    height: auto;
    list-style: none;
}

.btn-nav {
    display: none;
}

nav li {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 15px;
    padding: 10px;
}


nav a {
    display: flex;
    align-items: center;
    justify-content: space-between;
    text-align: center;
    height: auto;
    text-decoration: none;
    font-size: 0.9rem;
    color: var(--textColor);
}

nav a:hover {
    border-bottom: 1px solid var(--primerColor);
}

#open-SideBar-btn {
    display: none;
    background: none;
    border: none;
    cursor: pointer;
}

#open-SideBar-btn i {
    color: var(--primerColor);
    font-size: 4dvb;
}

#close-SideBar-btn {
    display: none;
    background: none;
    border: none;
    cursor: pointer;
}

#close-SideBar-btn i {
    font-size: 4dvb;
}

#overlay {
    background: rgb(0, 0, 0, 0.5);
    position: fixed;
    inset: 0;
    z-index: 9;
    display: none;
}

/* ----------------
CONTENIDO
------------------*/
main {
    position: relative;
    top: 200px;
    background-color: var(--bg);
}

.sliderSenaRa {
    height: 500px;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: flex-end;
    position: relative;
}

.sliderSenaRa::before {
    z-index: 1;
    content: '';
    position: absolute;
    background-color: rgba(0, 0, 0, 0.2);
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
}

.sliderSenaRa #imgSlider {
    width: 100%;
    height: 100%;
    object-fit: cover;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 0;
}

.img-slider {
    position: absolute;
    width: 100%;
    clip-path: circle(0% at 0 50%);
}

.img-slider.imgSliderActive {
    clip-path: circle(150% at 0 50%);
    transition: 2s ease-in-out;
    transition-property: clip-path;
}

.boxSliderInfo {
    width: 100%;
    height: auto;
    padding: 10px 0;
    background-color: rgba(0, 0, 0, 0.8);
    z-index: 1;
    display: none;
}

.boxSliderInfo.infoSliderActive {
    display: block;
}

.logoSenaRa {
    width: 70px;
    height: 70px;
}

.logoSenaRa img {
    width: 100%;
    height: 100%;
    object-fit: contain;
}

.boxMensaje {
    width: 100%;
    height: auto;
    padding-left: 150px;
    display: flex;
    align-items: center;
    gap: 20px;
    position: relative;
}

.boxMensaje i {
    font-size: 3rem;
    color: var(--textColorTwo);
    flex: 1;
    text-align: center;
}

.mensaje {
    width: 400px;
    height: auto;
    display: flex;
    align-items: center;
    justify-content: flex-start;
}

.textMensaje {
    font-size: 1.4rem;
    font-weight: 600;
    color: var(--textColorTwo);
}
/* ... */

